fix enter cua tim kiem khach hang, san pham

--- a/views/admin/adcanhan/canhan.ejs
+++ b/views/admin/adcanhan/canhan.ejs
@@ -48,19 +48,13 @@
                                                             style="width: 370px;height: 40px;" value="<%= nhanvien ? nhanvien.sodienthoai : '' %>"/>
                                                         </div><br/>
                                                     </div>
-                                                    <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                                        <div class="single-register">
-                                                            <p>Mật khẩu<span>*</span></p>
-                                                            <input class="register-emailaddress-phone" type="password" id="password" name="pass" 
-                                                            style="width: 800px;height: 40px;" value="<%= nhanvien ? nhanvien.matkhau : '' %>"/>
-                                                        </div>
-                                                    </div> -->
                                                 </div>
                                                 <br/>
                                                 <div class="single-register" align="center">
-                                                    <input class="btn-login" type="submit" name="btn btn-primary"
+                                                    <input class="btn btn-primary" class="btn-login" type="submit" name="btn btn-primary"
                                                         value="Cập nhật">
                                                 </div>
+                                                <a class="btn btn-info" href="admin">Quay lại?</a>
                                             </div>
                                         </div>
                                     </div>
