--- a/views/admin/adcanhan/doimatkhau.ejs
+++ b/views/admin/adcanhan/doimatkhau.ejs
@@ -32,7 +32,7 @@
                                             <input type="submit" name="xacnhan" value="Xác nhận"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
