--- a/views/admin/addonhang/chitietdonhang.ejs
+++ b/views/admin/addonhang/chitietdonhang.ejs
@@ -80,6 +80,7 @@
                     <% }) %>
                     
                   </div>
+                  <a class="btn btn-info" href="admin/donhang">Quay lại?</a>
                 </div>
                 <div class="panel panel-default col-md-4">
                   <div class="panel-heading">
