--- a/views/admin/addonhang/updatestatus.ejs
+++ b/views/admin/addonhang/updatestatus.ejs
@@ -59,7 +59,7 @@
                                 </select><br>
                                 <input type="button" onclick="updateStatusBill()" value="Cập nhật đơn hàng" name="capnhatdonhang" class="btn btn-success <%= donhang.trangthai == 2 ? 'hidden' : '' %> %>"><br/>
                                 <br/>
-                                <a href="admin/donhang">Quay lại?</a>
+                                <a class="btn btn-info" href="admin/donhang">Quay lại?</a>
                             </div>
                         </section>
 
