--- a/views/admin/adloaisanpham/updateLSP.ejs
+++ b/views/admin/adloaisanpham/updateLSP.ejs
@@ -29,7 +29,7 @@
                                             <input type="submit" name="capnhatloaisp" value="Cập nhật loại sản phẩm"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/loaisanpham">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/loaisanpham">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
