--- a/views/admin/adnhanvien/updatenv.ejs
+++ b/views/admin/adnhanvien/updatenv.ejs
@@ -39,7 +39,7 @@
                                             <input type="submit" name="capnhatnhanvien" value="Cập nhật nhân viên"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/nhanvien">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/nhanvien">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
