--- a/views/admin/adthuonghieu/updatethuonghieu.ejs
+++ b/views/admin/adthuonghieu/updatethuonghieu.ejs
@@ -41,7 +41,7 @@
                                             <input type="submit" name="capnhatthuonghieu" value="Cập nhật thương hiệu"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/thuonghieu">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/thuonghieu">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
