--- a/views/admin/adtintuc/updateblog.ejs
+++ b/views/admin/adtintuc/updateblog.ejs
@@ -52,7 +52,7 @@
                                             <input type="submit" name="capnhattintuc" value="Cập nhật tin tức"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/tintuc">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/tintuc">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
