--- a/views/admin/adnhanvien/createnv.ejs
+++ b/views/admin/adnhanvien/createnv.ejs
@@ -52,7 +52,7 @@
                                             <input type="submit" name="themnhanvien" value="Thêm nhân viên"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/nhanvien">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/nhanvien">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
