--- a/views/admin/adsanpham/create.ejs
+++ b/views/admin/adsanpham/create.ejs
@@ -72,7 +72,7 @@
                                             <input type="submit" name="themsanpham" value="Thêm sản phẩm"
                                                  class="btn btn-primary"><br />
                                             <br />
-                                            <a href="admin/sanpham">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/sanpham">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
