--- a/views/admin/adthuonghieu/createthuonghieu.ejs
+++ b/views/admin/adthuonghieu/createthuonghieu.ejs
@@ -35,7 +35,7 @@
                                             <input type="submit" name="themthuonghieu" value="Thêm thương hiệu"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/thuonghieu">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/thuonghieu">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
