--- a/views/admin/adtintuc/createblog.ejs
+++ b/views/admin/adtintuc/createblog.ejs
@@ -38,7 +38,7 @@
                                             <input type="submit" name="themtintuc" value="Thêm tin tức"
                                                 class="btn btn-primary"><br/>
                                             <br/>
-                                            <a href="admin/tintuc">Quay lại?</a>
+                                            <a class="btn btn-info" href="admin/tintuc">Quay lại?</a>
                                         </form>
                                     </div>
                                 </div>
