--- a/views/client/dangky/dangky.ejs
+++ b/views/client/dangky/dangky.ejs
@@ -145,6 +145,7 @@
                 },
                 password: {
                     required: true,
+                    minlength: 4
                 },
             },
             messages: {
@@ -165,6 +166,7 @@
                 },
                 password: {
                     required: 'Mật khẩu không được để trống',
+                    minlength: 'Mật khẩu không được dưới 4 ký tự'
                 },
             }
         });
