--- a/views/client/canhan/doimatkhau.ejs
+++ b/views/client/canhan/doimatkhau.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        .error {
+            color: red;
+        }
+    </style>
 <%- include ('../partials/head'); -%>
 
     <body>
@@ -44,7 +49,8 @@
                         required: true
                     },
                     mkmoi:{
-                        required: true
+                        required: true,
+                        minlength: 4
                     },
                     xacnhanmk:{
                         required: true,
@@ -56,7 +62,8 @@
                         required: 'Mật khẩu cũ không được để trống'
                     },
                     mkmoi:{
-                        required: 'Mật khẩu mới không được để trống'
+                        required: 'Mật khẩu mới không được để trống',
+                        minlength: 'Mật khẩu không được dưới 4 ký tự'
                     },
                     xacnhanmk: {
                         required: ' Không được để trống',
