--- a/views/admin/adsanpham/update.ejs
+++ b/views/admin/adsanpham/update.ejs
@@ -30,7 +30,7 @@
                                             <input type="text" class="form-control" name="tensp"
                                                 value="<%= product.tensp %>" placeholder="Tên sản phẩm"><br>
                                             <label>Giá tiền</label>
-                                            <input type="text" class="form-control" name="giatien"
+                                            <input type="number" class="form-control" name="giatien"
                                                 value="<%= product.giatien %>" placeholder="Giá sản phẩm"><br>
                                             <label>Trạng thái</label> <br />
                                             <% if(product.trangthai){ %>
