--- a/views/admin/adsanpham/create.ejs
+++ b/views/admin/adsanpham/create.ejs
@@ -31,7 +31,7 @@
                                             <input type="text" class="form-control" name="tensp"
                                                 placeholder="Tên sản phẩm"><br>
                                             <label>Giá tiền</label>
-                                            <input type="text" class="form-control" name="giatien"
+                                            <input type="number" class="form-control" name="giatien"
                                                 placeholder="Giá sản phẩm" ><br>
                                             <label>Trạng thái</label> <br />
                                             <input name="trangthai" type="radio" value="1" checked="checked" >
